[package]
name = "pk-archiver"
version = "0.1.0"
edition = "2021"

[dependencies]
# specifically trying to use rustls rather than native-tls since our Dockerfile doesn't like openssl(???)
anyhow = "1.0.79"
axum = { version = "0.7.4"}
config = { version = "0.14.0", default-features = false, features = ["toml"] }
data-encoding = "2.5.0"
futures = "0.3.30"
image = { version = "0.24.8" }
reqwest = { version = "0.11.24" , default-features = false, features = ["rustls-tls"]}
rust-s3 = { version = "0.33.0", default-features = false, features = ["tokio-rustls-tls"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
sha2 = "0.10.8"
sqlx = { version = "0.7.3", features = ["runtime-tokio", "postgres", "time"] }
thiserror = "1.0.56"
time = "0.3.34"
tokio = { version = "1.36.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
webp = "0.2.6"
