[package]
name = "pluralkit-avatars"
version = "0.1.0"
edition = "2021"

[dependencies]
# specifically trying to use rustls rather than native-tls since our Dockerfile doesn't like openssl(???)
anyhow = "1.0.79"
axum = { version = "0.7.4"}
config = { version = "0.14.0", default-features = false, features = ["toml"] }
data-encoding = "2.5.0"
form_urlencoded = "1.2.1"
futures = "0.3.30"
gif = "0.13.1"
image = { version = "0.24.8", default-features = false, features = ["gif", "jpeg", "png", "webp", "tiff"] }
reqwest = { version = "0.11.24" , default-features = false, features = ["rustls-tls", "trust-dns"]}
rust-s3 = { version = "0.33.0", default-features = false, features = ["tokio-rustls-tls"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
sha2 = "0.10.8"
sqlx = { version = "0.7.3", features = ["runtime-tokio", "postgres", "time", "uuid"] }
thiserror = "1.0.56"
time = "0.3.34"
tokio = { version = "1.36.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.7.0", features = ["serde"] }
webp = "0.2.6"
